[package]
name = "toml_reader"
version = "0.1.1"
edition = "2024"
authors = ["nascar_driver"]
description = "A simple library for loading TOML config files"
license = "MIT"
repository = "https://github.com/nascar-driver/toml_reader"

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
